fix(input): ngMessages jump with ngShow
WIP BRANCH - Not ready for merge.

When the ngMessages directive was used with the ngShow
directive inside of an md-input-container, the UI would
jump rather than properly animating.

Additionally, if the messages spanned multiple lines,
the animations were incorrect due to hard-coded values.

Fix many styles and move animations into JS so we can
properly calculate message heights.

_NOTE: The messages may still jump due to
https://github.com/angular/angular.js/issues/12969; this
fixes a different, but similar bug._

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -14,8 +14,10 @@ $input-padding-top: 2px !default;
 
 $input-error-font-size: 12px !default;
 $input-error-height: 24px !default;
+$input-error-line-height: $input-error-font-size + 2px;
+$error-padding-top: ($input-error-height - $input-error-line-height) / 2;
 
-$icon-offset : 36px !default;
+$icon-offset: 36px !default;
 
 $icon-float-focused-top: -8px !default;
 
@@ -24,6 +26,7 @@ md-input-container {
   display: inline-block;
   position: relative;
   padding: $input-container-padding;
+  padding-bottom: $input-container-padding + $input-error-height;
   margin: 18px 0;
 
   &.md-block {
@@ -93,7 +96,6 @@ md-input-container {
     left: 0;
   }
 
-
   label:not(.md-no-float):not(.md-container-ignore),
   .md-placeholder {
     order: 1;
@@ -134,7 +136,7 @@ md-input-container {
   &:not( .md-input-has-value ) input:not( :focus )::-webkit-datetime-edit-week-field,
   &:not( .md-input-has-value ) input:not( :focus )::-webkit-datetime-edit-year-field,
   &:not( .md-input-has-value ) input:not( :focus )::-webkit-datetime-edit-text {
-      color: transparent;
+    color: transparent;
   }
 
   /*
@@ -185,22 +187,15 @@ md-input-container {
     bottom: 7px;
   }
 
-  &.md-input-invalid {
-    ng-messages, data-ng-messages, x-ng-messages,
-    [ng-messages], [data-ng-messages], [x-ng-messages] {
-      opacity: 1;
-    }
-  }
-
+  //
+  // ngMessage base styles - animations moved to input.js
+  //
   ng-messages, data-ng-messages, x-ng-messages,
   [ng-messages], [data-ng-messages], [x-ng-messages] {
     position: relative;
     order: 4;
     min-height: $input-error-height;
     overflow: hidden;
-    transition: $swift-ease-out;
-    transition-duration: $swift-ease-out-duration / 1.5;
-    opacity: 0;
     clear: left;
 
     .md-char-counter {
@@ -209,48 +204,64 @@ md-input-container {
       right: 0;
       bottom: auto;
     }
+
+    &.ng-hide:not(.ng-hide-animate) {
+      // Use !important to override the default ng-hide styling of "display: none !important;"
+      display: block !important;
+
+      // Hide any children (except the char counter) since we are now display: block;
+      :not(.md-char-counter) {
+        display: none;
+      }
+    }
+
   }
 
   ng-message, data-ng-message, x-ng-message,
   [ng-message], [data-ng-message], [x-ng-message],
   [ng-message-exp], [data-ng-message-exp], [x-ng-message-exp],
   .md-char-counter {
-    $input-error-line-height: $input-error-font-size + 2px;
-    //-webkit-font-smoothing: antialiased;
     font-size: $input-error-font-size;
     line-height: $input-error-line-height;
     overflow: hidden;
 
+    // Setup transitions
+    transition: $swift-ease-in;
+    transition-duration: $swift-ease-out-duration / 1.5;
+
     // Add some top padding which is equal to half the difference between the expected height
     // and the actual height
-    $error-padding-top: ($input-error-height - $input-error-line-height) / 2;
     padding-top: $error-padding-top;
 
+    // For everything except the character counter (i.e. all messages)
     &:not(.md-char-counter) {
+      // Add some right padding so that the messages don't overlap the character counter
       padding-right: rem(5);
-    }
 
-    &.ng-enter {
-      transition: $swift-ease-in;
-
-      // Delay the enter transition so it happens after the leave
-      transition-delay: $swift-ease-in-duration / 1.5;
-
-      // Since we're delaying the transition, we speed up the duration a little bit to compensate
-      transition-duration: $swift-ease-in-duration / 1.5;
+      // ANIM: By default, we hide the messages when valid (see below)
       opacity: 0;
-      margin-top: -$input-error-line-height - $error-padding-top;
-      &.ng-enter-active {
-        opacity: 1;
-        margin-top: 0;
-      }
+      margin-top: -100px;
     }
-    &.ng-leave {
-      transition: $swift-ease-out;
-      transition-duration: $swift-ease-out-duration / 1.5;
-      &.ng-leave-active {
-        margin-top: -$input-error-line-height - $error-padding-top;
-        opacity: 0;
+  }
+
+  // ANIM: By default (or if the user asks us not to auto-hide), show messages when invalid
+  &.md-input-invalid, &.md-no-auto-hide-messages {
+    &.md-input-message-animation {
+      background-color: green;
+      //opacity: 1;
+      //margin-top: 0;
+
+      // Setup the "starting point" for enter/leave animations (actual animation is handled in input.js)
+      &.ng-enter, &.ng-leave-active {
+        background-color: blue;
+        //opacity: 0;
+        //margin-top: -100px;
+      }
+
+      &.ng-leave, &.ng-enter-active {
+        background-color: pink;
+        //opacity: 1;
+        //margin-top: 0;
       }
     }
   }
@@ -259,7 +270,7 @@ md-input-container {
   &.md-input-has-placeholder,
   &.md-input-has-value {
     label:not(.md-no-float) {
-      transform: translate3d(0,$input-label-float-offset,0) scale($input-label-float-scale);
+      transform: translate3d(0, $input-label-float-offset, 0) scale($input-label-float-scale);
     }
   }
 
@@ -293,12 +304,11 @@ md-input-container {
 
 md-input-container.md-icon-float {
 
-  transition : margin-top 0.5s $swift-ease-out-timing-function ;
+  transition: margin-top 0.5s $swift-ease-out-timing-function;
 
-
-  > label  {
-      pointer-events:none;
-      position:absolute;
+  > label {
+    pointer-events: none;
+    position: absolute;
   }
 
   > md-icon {
@@ -310,9 +320,9 @@ md-input-container.md-icon-float {
   &.md-input-has-value {
 
     label {
-        transform: translate3d(0,$input-label-float-offset,0) scale($input-label-float-scale);
-        transition: transform $swift-ease-out-timing-function 0.5s;
-      }
+      transform: translate3d(0, $input-label-float-offset, 0) scale($input-label-float-scale);
+      transition: transform $swift-ease-out-timing-function 0.5s;
+    }
   }
 
 }
